# marketQAL

./: README.md  implementation_plan.md
hermes-v1/: .env.example  .gitignore  bot.py  minimax.py  prompts.py  pyproject.toml  requirements.txt
hermes-v1/data/fixtures/: meta_sample.csv  shopee_click_sample.csv  shopee_commission_sample.csv
hermes-v1/docs/: AGENTS.md  DEVELOPMENT_RULES.md  README.md
hermes-v1/modules/: constants.py  epc_calculator.py  insight_engine.py  meta_analyzer.py  models.py  product_scorer.py  shopee_analyzer.py
hermes-v1/tests/: conftest.py  test_bot.py  test_epc.py  test_insight.py  test_insight_engine.py  test_meta.py  test_product_scorer.py  test_shopee.py
